--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,18 +18,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.net.io.jarvis"
     android:versionCode="2"
-    android:versionName="2.0.4" >
+    android:versionName="2.0.5" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    
+    <permission android:name="com.example.gcm.permission.C2D_MESSAGE" 
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
     
     <uses-sdk
-        android:minSdkVersion="3"
-        android:targetSdkVersion="4" />
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
 
     <application
         android:description="@string/app_descrip"
         android:icon="@drawable/app_icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:allowBackup="true" >
         <activity
             android:name="nz.net.io.jarvis.LookupActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -66,27 +74,17 @@
                 android:resource="@xml/searchable" />
         </activity>
 
-        <!-- Broadcast Receiver that will process AppWidget updates -->
+        <activity android:name="nz.net.io.jarvis.SettingsActivity"></activity>
+        
         <receiver
-            android:name="nz.net.io.jarvis.WordWidget"
-            android:label="@string/widget_name" >
+            android:name=".MyBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
             </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_word" />
         </receiver>
-
-        <!-- Service to perform web API queries -->
-        <service android:name="nz.net.io.jarvis.WordWidget$UpdateService" />
-
-        <!-- Alarm receiver -->
-        <receiver
-            android:name="nz.net.io.jarvis.AlarmReceiver"
-            android:process=":remote" >
-        </receiver>
+        <service android:name=".MyIntentService" />        
     </application>
 
     <meta-data
