--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.net.io.jarvis"
     android:versionCode="2"
-    android:versionName="2.0.5" >
+    android:versionName="2.0.6.5" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -30,17 +30,19 @@
     <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
     
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <application
         android:description="@string/app_descrip"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar"
         android:allowBackup="true" >
         <activity
             android:name="nz.net.io.jarvis.LookupActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/Theme.AppCompat.Light"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
