--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,18 +17,11 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.net.io.jarvis"
-    android:versionCode="2"
-    android:versionName="2.0.6.8" >
+    android:versionCode="3"
+    android:versionName="3" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    
-    <permission android:name="com.example.gcm.permission.C2D_MESSAGE" 
-        android:protectionLevel="signature" />
-    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
-    
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
@@ -39,20 +32,23 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar"
         android:allowBackup="true" >
+
         <activity
-            android:name="nz.net.io.jarvis.LookupActivity"
+            android:name="nz.net.io.jarvis.BaseActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/Theme.AppCompat.Light"
             android:launchMode="singleTop">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+  
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -63,9 +59,9 @@
                     android:host="lookup"
                     android:scheme="jarvis" />
             </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
 
@@ -76,19 +72,11 @@
 
         <activity android:name="nz.net.io.jarvis.SettingsActivity"></activity>
 
-        <receiver
-            android:name=".MyBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.example.gcm" />
-            </intent-filter>
-        </receiver>
         <service android:name=".MyIntentService" />        
     </application>
 
     <meta-data
         android:name="android.app.default_searchable"
-        android:value=".LookupActivity" />
+        android:value=".BaseActivity" />
 
 </manifest>
