--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.net.io.jarvis"
     android:versionCode="3"
-    android:versionName="3.0.2" >
+    android:versionName="3.0.4" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -64,6 +64,12 @@
                 <action android:name="android.intent.action.SEARCH" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            
+            <intent-filter>
+        		<action android:name="android.intent.action.SEND" />
+        		<category android:name="android.intent.category.DEFAULT" />
+        		<data android:mimeType="text/plain" />
+    		</intent-filter>
 
             <meta-data
                 android:name="android.app.searchable"
