--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,6 @@ android {
 dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.android.support:appcompat-v7:21.0.0'
+    compile "com.google.android.gms:play-services:7.5.+"
+    apply plugin: 'com.google.gms.google-services'
 }
