--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,41 +14,56 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nz.net.io.jarvis"
-    android:versionCode="3"
-    android:versionName="3.0.5" >
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    android:versionCode="4"
+    android:versionName="4.0.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="nz.net.io.jarvis.permission.RECEIVE" />
+
+    <permission
+        android:name="nz.net.io.jarvis.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="nz.net.io.jarvis.permission.C2D_MESSAGE" />
+
+    <meta-data
+        android:name="android.app.default_searchable"
+        android:value=".BaseActivity" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:allowBackup="true"
         android:description="@string/app_descrip"
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar"
-        android:allowBackup="true" >
-
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
-            android:name="nz.net.io.jarvis.BaseActivity"
+            android:name=".BaseActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:theme="@style/Theme.AppCompat.Light"
-            android:launchMode="singleTop">
-
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.Light" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-  
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -59,28 +74,46 @@
                     android:host="lookup"
                     android:scheme="jarvis" />
             </intent-filter>
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
             <intent-filter>
-        		<action android:name="android.intent.action.SEND" />
-        		<category android:name="android.intent.category.DEFAULT" />
-        		<data android:mimeType="text/plain" />
-    		</intent-filter>
+                <action android:name="android.intent.action.SEND" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
+            </intent-filter>
 
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+        <activity android:name=".SettingsActivity" />
 
-        <activity android:name="nz.net.io.jarvis.SettingsActivity"></activity>        
+        <receiver
+            android:name="com.google.android.gms.gcm.GcmReceiver"
+            android:exported="true"
+            android:permission="com.google.android.c2dm.permission.RECEIVE" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="nz.net.io.jarvis" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".JarvisGcmListenerService"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".RegistrationIntentService"
+            android:exported="false" >
+        </service>
     </application>
-
-    <meta-data
-        android:name="android.app.default_searchable"
-        android:value=".BaseActivity" />
 
 </manifest>
